// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item.styles Container DEVE ser igual ao snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomLeftRadius": 5,
      "borderBottomRightRadius": 5,
      "borderTopLeftRadius": 5,
      "borderTopRightRadius": 5,
      "marginBottom": 10,
      "paddingBottom": 10,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 10,
    }
  }
/>
`;

exports[`Item.styles Label DEVE ser igual ao snapshot 1`] = `
<Text
  style={
    {
      "color": "#47474D",
      "fontSize": 16,
      "fontWeight": "bold",
      "marginBottom": 5,
    }
  }
/>
`;

exports[`Item.styles Value DEVE ser igual ao snapshot 1`] = `
<Text
  style={
    {
      "color": "#47474D",
      "fontSize": 16,
      "fontWeight": "normal",
      "marginBottom": 5,
    }
  }
/>
`;
